<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/contain_signUp"
    android:background="#F5F5F1"
    android:orientation="vertical"
    tools:context="kmitl.tiwipabmin.eatallday.com.tiwipabmin.eatallday.controller.activity.SignUpActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#8c8c8c">

        <include layout="@layout/sign_up_bar"/>

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#808080"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"

            android:gravity="center">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_profile"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            float:fletPadding="1dp">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:hint="@string/hint_name"
                android:backgroundTint="#FFFFFF"
                android:inputType="text" />

        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_email"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            float:fletPadding="1dp">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_email"
                android:backgroundTint="#FFFFFF"
                android:gravity="center"
                android:inputType="text" />

        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_password"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            float:fletPadding="1dp">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_password"
                android:backgroundTint="#FFFFFF"
                android:gravity="center"
                android:inputType="textPassword" />

        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_verify_gray_64dp"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            float:fletPadding="1dp">

            <EditText
                android:id="@+id/et_verify_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_verify_password"
                android:backgroundTint="#FFFFFF"
                android:gravity="center"
                android:inputType="textPassword" />

        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_facebook"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            float:fletPadding="1dp">

            <EditText
                android:id="@+id/et_facebook"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_facebook"
                android:backgroundTint="#FFFFFF"
                android:gravity="center"
                android:inputType="text" />

        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    </LinearLayout>

    <Button
        android:id="@+id/btn_verify"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/verify"
        android:backgroundTint="#21A0BE"
        android:textColor="#FFFFFFFF"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/sign_in" />

    </LinearLayout>

</LinearLayout>
