...
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_image"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    app:civ_border_color="#8C8C8C"
                    app:civ_border_width="2dp" />
...
                    android:gravity="center"
                    android:text="EatAllDay"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textMultiLine"
                    android:maxLength="50"
                    android:maxLines="3"
                    android:textSize="20sp"
...
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/default_facebook"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textMultiLine"
                    android:maxLength="50"
                    android:maxLines="3"
                    android:textSize="15sp"
...
                    android:layout_marginTop="5dp"
                    android:text="@string/description"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textMultiLine"
                    android:maxLength="100"
                    android:textSize="15sp"
                    android:maxLines="10"
...
                    android:layout_marginTop="5dp"
                    android:text="@string/default_description"
                    android:textSize="15sp" />


                <ImageView
                    android:id="@+id/iv_edit_profile"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="bottom|right"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/ic_edit_gray_64dp" />

                <ImageView
                    android:id="@+id/iv_verify"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="bottom|right"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_verify_gray_64dp"
                    android:visibility="gone" />
...
