...
    <string name="description">เพิ่มเติม</string>
    <string name="host">Host</string>
    <string name="default_topic">Menu to day</string>
    <string name="default_name_food">ส้มตำไทยไข่เค็ม</string>
    <string name="eat_all_day">EatAllDay</string>
    <string name="btn_add_food">เพิ่มรายการอาหาร</string>
    <string name="btn_random">ทำการสุ่มอาหาร</string>
    <string name="btn_random_now">เริ่มสุ่มรายการอาหาร ณ บัดนี้!</string>
    <string name="hint_cost">120</string>
    <string name="cost">ราคา</string>
    <string name="btn_cancel">ยกเลิก</string>
    <string name="btn_add">เลือก</string>
    <string name="choose">Choose</string>
    <string name="default_cost">20 บาท / 1 ชิ้น</string>
    <string name="currency">บาท</string>
    <string name="btn_change">Change</string>
    <string name="title_this_meal">อาหารมื้อนี้</string>
    <string name="btn_accept">ยอมรับ</string>
    <string name="topics">หัวข้อรายการอาหารมื้อนี้</string>
    <string name="hint_topics">กรุณากรอกหัวข้อด้วยค่ะ.</string>
    <string name="btn_ok">ตกลง</string>
    <string name="view_menu">ดูข้อมูลรายการอาหาร</string>
    <string name="edit_menu">แก้ไขข้อมูลรายการอาหาร</string>
    <string name="delete_menu">ลบรายการอาหาร</string>
    <string name="share">แบ่งปัน</string>
    <string name="delete_menu_history">ลบประวัติรายการอาหาร</string>
    <string name="content_alert_edit_menu">คุณยังไม่ได้บันทึกการเปลี่ยนแปลงข้อมูลรายการอาหาร คุณแน่ใจนะที่จะออกจากหน้านี้</string>
...
