...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                float:fletPadding="2dp">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />

            </com.wrapp.floatlabelededittext.FloatLabeledEditText>
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                float:fletPadding="2dp">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />

            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        </LinearLayout>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in"
            android:textAppearance="@style/TextAppearance.AppCompat" />
...
