...
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/border_style"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_item1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/splash_screen_v1"
                android:scaleType="centerCrop" />

        </LinearLayout>
...
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/border_style"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_item2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/splash_screen_v1"
                android:scaleType="centerCrop" />

...
